s1 flood mapping in data_stach_tools_v1.py

--- a/Development_scripts/data_stack_testing/sentinel1.ipynb
+++ b/Development_scripts/data_stack_testing/sentinel1.ipynb
@@ -9,10 +9,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pandas as pd\n",
     "import ee\n",
     "from geemap import geemap\n",
     "ee.Initialize()"
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,40 +171,54 @@
     "                 '2019-09-01', '2019-10-01',\n",
     "                 '2019-11-01', '2019-12-01']\n",
     "\n",
-    "# START_DATE_LIST=['2018-01-01', '2018-02-01', \n",
-    "#                  '2018-03-01', '2018-04-01', \n",
-    "#                  '2018-05-01', '2018-06-01', \n",
-    "#                  '2018-07-01', '2018-08-01',\n",
-    "#                  '2018-09-01', '2018-10-01',\n",
-    "#                  '2018-11-01', '2018-12-01']\n",
+    "START_DATE_LIST=['2018-01-01', '2018-02-01', \n",
+    "                 '2018-03-01', '2018-04-01', \n",
+    "                 '2018-05-01', '2018-06-01', \n",
+    "                 '2018-07-01', '2018-08-01',\n",
+    "                 '2018-09-01', '2018-10-01',\n",
+    "                 '2018-11-01', '2018-12-01']\n",
+    "\n",
+    "START_DATE_LIST=[d.strftime('%Y-%m-%d') for d in pd.date_range(start='2017-01-01', end='2017-12-01', freq='MS')]\n",
+    "\n",
     "\n",
     "filters = [ee.Filter.listContains(\"transmitterReceiverPolarisation\", \"VV\"),\n",
     "           ee.Filter.listContains(\"transmitterReceiverPolarisation\", \"VH\"),\n",
     "           ee.Filter.equals(\"instrumentMode\", \"IW\"),\n",
-    "           ee.Filter.geometry(AOI)]"
+    "           ee.Filter.geometry(AOI)]\n",
+    "\n",
+    "def s1_mask_border_noise(img):\n",
+    "    \"\"\"\n",
+    "    Sentinel-1 data on GEE sometimes suffers from 'border noise' prior to May 2018 at swath edges.\n",
+    "    This needs to be masked in individual images via mapping before compositing images.\n",
+    "    This func is derived from the example code provided on the \n",
+    "    GEE ee.ImageCollection(\"COPERNICUS/S1_GRD\") pages\n",
+    "    \"\"\"\n",
+    "    edge = img.lt(-30.0)\n",
+    "    masked_img = img.mask().And(edge.Not())\n",
+    "    return img.updateMask(masked_img)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-01-01\n",
-      "2019-02-01\n",
-      "2019-03-01\n",
-      "2019-04-01\n",
-      "2019-05-01\n",
-      "2019-06-01\n",
-      "2019-07-01\n",
-      "2019-08-01\n",
-      "2019-09-01\n",
-      "2019-10-01\n",
-      "2019-11-01\n",
-      "2019-12-01\n"
+      "2017-01-01\n",
+      "2017-02-01\n",
+      "2017-03-01\n",
+      "2017-04-01\n",
+      "2017-05-01\n",
+      "2017-06-01\n",
+      "2017-07-01\n",
+      "2017-08-01\n",
+      "2017-09-01\n",
+      "2017-10-01\n",
+      "2017-11-01\n",
+      "2017-12-01\n"
      ]
     }
    ],
@@ -219,6 +234,7 @@
     "    \n",
     "    # composites\n",
     "    s1_median = (s1.select('VV', 'VH')\n",
+    "                 .map(s1_mask_border_noise)\n",
     "                  .median()\n",
     "                  .clip(roi_train.geometry())\n",
     "                  .rename(f'{START_DATE[0:7]}_VV', f'{START_DATE[0:7]}_VH'))\n",
@@ -518,13 +534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff5fc9dee93043f7a6723c4c910dec1c",
+       "model_id": "6b4737dc27f74a8aa53c0a7222ce5467",
        "version_major": 2,
        "version_minor": 0
       },
@@ -542,12 +558,16 @@
     "\n",
     "Map = geemap.Map(center=(51.85, 27.8), zoom=9)\n",
     "Map.add_basemap('SATELLITE')\n",
-    "for i, START_DATE in enumerate(START_DATE_LIST[0:6]):\n",
+    "for i, START_DATE in enumerate(START_DATE_LIST[0:12]):\n",
     "    vis = {'min': -50,'max': 1,'bands': [f'{START_DATE[0:7]}_VV', \n",
     "                                         f'{START_DATE[0:7]}_VH', \n",
     "                                         f'{START_DATE[0:7]}_VH']}\n",
+    "    \n",
+    "    vis = {'min': -50,'max': 0,'bands': [f'{START_DATE[0:7]}_VH']}\n",
     "    Map.addLayer(median_stack, vis, f'S1_{START_DATE}')\n",
-    "Map"
+    "Map\n",
+    "\n",
+    "# Jan-Feb2018 have a corrupt stipe of S1 data - not sure why, but these months need ignoring for now"
    ]
   },
   {
@@ -611,7 +631,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test flooding frequency maps"
+    "# 3) Test flooding frequency maps"
    ]
   },
   {
@@ -646,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -698,6 +718,9 @@
     "SMOOTHING_RADIUS = 100\n",
     "FLOOD_THRESH = -13\n",
     "\n",
+    "# Jan and Feb 2018 have a corrupt stipe of S1 data - not sure why, but these months need ignoring for now\n",
+    "\n",
+    "\n",
     "for i, START_DATE in enumerate(START_DATE_LIST):\n",
     "    print(START_DATE)\n",
     "    END_DATE = ee.Date(START_DATE).advance(1, 'month')\n",
@@ -711,6 +734,7 @@
     "    s1_median = (s1.select('VV'#, \n",
     "                           #'VH'\n",
     "                          )\n",
+    "                  .map(s1_mask_border_noise)\n",
     "                  .median()\n",
     "                  .clip(roi_train.geometry())\n",
     "                  .rename(f'{START_DATE[0:7]}_VV'#, f'{START_DATE[0:7]}_VH'\n",
@@ -738,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {
     "scrolled": false
    },
@@ -746,7 +770,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bf356c482c4047dc9d3991dee2aaeed5",
+       "model_id": "26eec41ac35148adb792583057518120",
        "version_major": 2,
        "version_minor": 0
       },
@@ -773,6 +797,203 @@
     "vis = {'min': 0,'max': 36,'bands': [f'VV']}\n",
     "Map.addLayer(count_stack, vis, 'flooded_count')\n",
     "\n",
+    "Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel1_flood_index_v1(): hello!\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-01-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-02-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-03-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-04-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-05-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-06-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-07-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-08-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-09-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-10-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-11-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2017-12-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-01-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-02-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-03-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-04-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-05-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-06-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-07-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-08-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-09-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-10-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-11-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2018-12-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-01-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-02-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-03-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-04-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-05-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-06-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-07-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-08-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-09-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-10-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-11-01\n",
+      "fetch_sentinel1_flood_index_v1(): processing month 2019-12-01\n",
+      "fetch_sentinel1_flood_index_v1(): bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fetch_sentinel1_flood_index_v1(aoi, start_date_str, end_date_str, smoothing_radius=100.0, flood_thresh=-13.0):\n",
+    "    \"\"\"\n",
+    "    Create a simple flood frequency layer from Sentinel-1 data (IW mode & VV)\n",
+    "    1) preprocess median monthly composites using start/end dates\n",
+    "    2) apply spatial smoother (focal median) to get rid of the backscatter\n",
+    "    3) threshold monthly composite as binary flooded/not flooded map\n",
+    "    4) accumulate binary monthly flood maps, and normalise by dividing by number of months \n",
+    "    \n",
+    "    NOTE: this func could be modified to make use of 'VH' polorisation.Needs further exploration. \n",
+    "    This paper however suggests VV might be better for flood detection:\n",
+    "    https://iopscience.iop.org/article/10.1088/1755-1315/357/1/012034/pdf\n",
+    "    \n",
+    "    :: params ::\n",
+    "    :param aoi: ee.featurecollection.FeatureCollection, used to indicate AOI extent \n",
+    "    : param start_date_str: str, should be YYYY-MM-01 for start month (inclusive) \n",
+    "    : param end_date_str: str, should be YYYY-MM-01 for end month (inclusive)  \n",
+    "    : param smoothing_radius: float, radius of smoothing kernel (metres)\n",
+    "    : param flood_thresh: float, VV values < flood_thresh are considered flooded.\n",
+    "    : returns : flood frequency map [0-1]\n",
+    "    \"\"\"\n",
+    "\n",
+    "    print('fetch_sentinel1_flood_index_v1(): hello!')\n",
+    "    \n",
+    "    \n",
+    "    def s1_mask_border_noise(img):\n",
+    "        \"\"\"\n",
+    "        Sentinel-1 data on GEE sometimes suffers from 'border noise' prior to May 2018 at swath edges.\n",
+    "        This needs to be masked in individual images via mapping before compositing images.\n",
+    "        This func is derived from the example code provided on the \n",
+    "        GEE ee.ImageCollection(\"COPERNICUS/S1_GRD\") pages\n",
+    "        \"\"\"\n",
+    "        edge = img.lt(-30.0)\n",
+    "        masked_img = img.mask().And(edge.Not())\n",
+    "        return img.updateMask(masked_img)\n",
+    "    \n",
+    "    band='VV' # threshold needs changing if using VH and further testing \n",
+    "    \n",
+    "    # generate list of months\n",
+    "    start_date_list=[d.strftime('%Y-%m-%d') for d in pd.date_range(start=start_date_str, \n",
+    "                                                                   end=end_date_str, freq='MS')]\n",
+    "    n_months = len(start_date_list)  # used for standardising\n",
+    "    \n",
+    "    # specify filters to apply to the GEE Sentinel-1 collection\n",
+    "    filters = [ee.Filter.listContains(\"transmitterReceiverPolarisation\", band),\n",
+    "           ee.Filter.equals(\"instrumentMode\", \"IW\"),\n",
+    "           ee.Filter.geometry(aoi)]\n",
+    "    \n",
+    "    # iteratively generate a monthly flood map and aggregate them\n",
+    "    for i, start_date in enumerate(start_date_list):\n",
+    "        print(f'fetch_sentinel1_flood_index_v1(): processing month {start_date}')\n",
+    "        end_date = ee.Date(start_date).advance(1, 'month')\n",
+    "        \n",
+    "        # load, preprocess and make composite\n",
+    "        s1_median = (ee.ImageCollection('COPERNICUS/S1_GRD')\n",
+    "             .filterDate(start_date, end_date)\n",
+    "             .filter(filters)\n",
+    "             .select(band)\n",
+    "             .map(s1_mask_border_noise) # remove border noise\n",
+    "             .median()\n",
+    "             .clip(aoi.geometry()))\n",
+    "        \n",
+    "        # smooth image to get rid of backscatter noise\n",
+    "        s1_smoothed = s1_median.focal_median(smoothing_radius, 'circle', 'meters')        \n",
+    "        \n",
+    "        # apply a flood masking threshold\n",
+    "        flood_map = s1_smoothed.lt(flood_thresh) \n",
+    "        \n",
+    "        # sum months\n",
+    "        if i == 0:\n",
+    "            flood_aggr = flood_map\n",
+    "        else:\n",
+    "            flood_aggr = flood_aggr.add(flood_map)\n",
+    "    \n",
+    "    ## standardise & rename\n",
+    "    flood_aggr = flood_aggr.divide(n_months).rename(\"s1_floodfreq\")\n",
+    "    \n",
+    "    print('fetch_sentinel1_flood_index_v1(): bye!')    \n",
+    "    return flood_aggr\n",
+    "\n",
+    "s1 = fetch_sentinel1_flood_index_v1(aoi=roi_train, \n",
+    "                                    start_date_str='2017-01-01', \n",
+    "                                    end_date_str='2019-12-31'#, \n",
+    "                                    #smoothing_radius=100.0, \n",
+    "                                    #flood_thresh=-13.0\n",
+    "                                   )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'type': 'Image',\n",
+       " 'bands': [{'id': 's1_floodfreq',\n",
+       "   'data_type': {'type': 'PixelType',\n",
+       "    'precision': 'float',\n",
+       "    'min': 0,\n",
+       "    'max': 1},\n",
+       "   'dimensions': [2, 2],\n",
+       "   'origin': [27, 51],\n",
+       "   'crs': 'EPSG:4326',\n",
+       "   'crs_transform': [1, 0, 0, 0, 1, 0]}]}"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s1.getInfo()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d7b2464e56854d98a3baa3f9617aacda",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map(center=[51.85, 27.8], controls=(WidgetControl(options=['position', 'transparent_bg'], widget=HBox(children…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "#visualise \n",
+    "Map = geemap.Map(center=(51.85, 27.8), zoom=9)\n",
+    "#Map.add_basemap('OpenStreetMap.BlackAndWhite')\n",
+    "Map.add_basemap('SATELLITE')\n",
+    "vis = {'min': 0,'max': 1,'bands': [f's1_floodfreq']}\n",
+    "Map.addLayer(s1, vis, 'flooded_count')\n",
     "Map"
    ]
   }
