--- a/Development_scripts/data_stack_testing/sentinel1.ipynb
+++ b/Development_scripts/data_stack_testing/sentinel1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -810,8 +810,6 @@
      "output_type": "stream",
      "text": [
       "fetch_sentinel1_flood_index_v1(): hello!\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2017-01-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2017-02-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2017-03-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2017-04-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2017-05-01\n",
@@ -820,10 +818,6 @@
       "fetch_sentinel1_flood_index_v1(): processing month 2017-08-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2017-09-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2017-10-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2017-11-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2017-12-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2018-01-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2018-02-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2018-03-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2018-04-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2018-05-01\n",
@@ -832,10 +826,6 @@
       "fetch_sentinel1_flood_index_v1(): processing month 2018-08-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2018-09-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2018-10-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2018-11-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2018-12-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2019-01-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2019-02-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2019-03-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2019-04-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2019-05-01\n",
@@ -844,8 +834,6 @@
       "fetch_sentinel1_flood_index_v1(): processing month 2019-08-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2019-09-01\n",
       "fetch_sentinel1_flood_index_v1(): processing month 2019-10-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2019-11-01\n",
-      "fetch_sentinel1_flood_index_v1(): processing month 2019-12-01\n",
       "fetch_sentinel1_flood_index_v1(): bye!\n"
      ]
     }
@@ -891,6 +879,9 @@
     "    # generate list of months\n",
     "    start_date_list=[d.strftime('%Y-%m-%d') for d in pd.date_range(start=start_date_str, \n",
     "                                                                   end=end_date_str, freq='MS')]\n",
+    "    # omit the winter months (jan, feb, nov, dec)\n",
+    "    start_date_list=[k for k in start_date_list if (int(k[5:7]) > 2) and (int(k[5:7]) < 11)]\n",
+    "    \n",
     "    n_months = len(start_date_list)  # used for standardising\n",
     "    \n",
     "    # specify filters to apply to the GEE Sentinel-1 collection\n",
@@ -940,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +949,7 @@
        "   'crs_transform': [1, 0, 0, 0, 1, 0]}]}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,6 +986,66 @@
     "vis = {'min': 0,'max': 1,'bands': [f's1_floodfreq']}\n",
     "Map.addLayer(s1, vis, 'flooded_count')\n",
     "Map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['2017-01-01', '2017-02-01', '2017-03-01', '2017-04-01', '2017-05-01', '2017-06-01', '2017-07-01', '2017-08-01', '2017-09-01', '2017-10-01', '2017-11-01', '2017-12-01', '2018-01-01', '2018-02-01', '2018-03-01', '2018-04-01', '2018-05-01', '2018-06-01', '2018-07-01', '2018-08-01', '2018-09-01', '2018-10-01', '2018-11-01', '2018-12-01', '2019-01-01', '2019-02-01', '2019-03-01', '2019-04-01', '2019-05-01', '2019-06-01', '2019-07-01', '2019-08-01', '2019-09-01', '2019-10-01', '2019-11-01', '2019-12-01']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['2017-03-01',\n",
+       " '2017-04-01',\n",
+       " '2017-05-01',\n",
+       " '2017-06-01',\n",
+       " '2017-07-01',\n",
+       " '2017-08-01',\n",
+       " '2017-09-01',\n",
+       " '2017-10-01',\n",
+       " '2018-03-01',\n",
+       " '2018-04-01',\n",
+       " '2018-05-01',\n",
+       " '2018-06-01',\n",
+       " '2018-07-01',\n",
+       " '2018-08-01',\n",
+       " '2018-09-01',\n",
+       " '2018-10-01',\n",
+       " '2019-03-01',\n",
+       " '2019-04-01',\n",
+       " '2019-05-01',\n",
+       " '2019-06-01',\n",
+       " '2019-07-01',\n",
+       " '2019-08-01',\n",
+       " '2019-09-01',\n",
+       " '2019-10-01']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_date_str = '2017-01-01'\n",
+    "end_date_str = '2019-12-01'\n",
+    "start_date_list=[d.strftime('%Y-%m-%d') for d in pd.date_range(start=start_date_str, \n",
+    "                                                               end=end_date_str, freq='MS')]\n",
+    "print(start_date_list)\n",
+    "\n",
+    "# filter the winter months (jan, feb, nov, dec)\n",
+    "start_date_list=[k for k in start_date_list if (int(k[5:7]) > 2) and (int(k[5:7]) < 11)]\n",
+    "\n",
+    "#start_date_str[5:7]\n",
+    "#[k for k in start_date_list if 'ab' in k]"
    ]
   }
  ],
