fixed bug related to S2 cloud masking over the whole_area

--- a/Development_scripts/debugging2.ipynb
+++ b/Development_scripts/debugging2.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "there is an issue processing certain tiles for the 'full mapping region'\n",
+    "I have traced the error back to fetch_sentinel2_v3(), and think it relates to cloud masking subfunction that uses 'where'\n",
+    "\n",
+    "\"EEException: Image.where: Incompatible number of bands in replacement image: 0.\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,11 +185,10 @@
     "    \"\"\"\n",
     "    img_new = img_orig.unmask(-99999)  # masked locations\n",
     "    fill_pixels = img_new.eq(-99999)  # binary mask with value = 1 where we want to fill   \n",
-    "    # EEException: Image.where: Incompatible number of bands in replacement image: 0.\n",
     "    img_new = img_new.where(fill_pixels, img_fill)  # fill img_new with img_fill where fill_pixels==1\n",
     "    mask = img_new.neq(-99999)  # -99999 will remain where no valid pixels in img_fill (i.e. cloudy in both), so remask\n",
     "    img_new = img_new.mask(mask)\n",
-    "    return img_new\n",
+    "    return img_new   \n",
     "\n",
     "def fetch_sentinel2_v3(aoi, date_list, s2_params):\n",
     "    \"\"\"\n",
@@ -251,7 +260,259 @@
     "        else:\n",
     "            median_stack = median_stack.addBands(s2cldless_median)\n",
     "    print('fetch_sentinel2_v3(): bye!')\n",
-    "    return median_stack\n"
+    "    return median_stack\n",
+    "\n",
+    "\n",
+    "def fetch_sentinel2_v4(aoi, date_list, s2_params, fill_mask_bkwd=True, fill_mask_fwd=True):\n",
+    "    \"\"\"\n",
+    "    fetch a datastack of Sentinel-2 composites, with cloud/shadow masking applied.\n",
+    "    most of the code to do this is derived from here:\n",
+    "    https://developers.google.com/earth-engine/tutorials/community/sentinel-2-s2cloudless\n",
+    "\n",
+    "    :: NEW FOR V2 ::\n",
+    "    * compositing period start and end dates need to be explicitly stated in 'date_list' (monthly composites no longer assumed).\n",
+    "    * bands returned are now defined by 's2_params', rather than hard coded.\n",
+    "\n",
+    "    :: NEW FOR V3 ::\n",
+    "    * attempts to fill cloud gaps with same time window of data from the previous year\n",
+    "      NOTE: this is not applied if the first date in date_list tuple is before April 2018 (no sentinel data on GEE prior to Apr 2017)\n",
+    "\n",
+    "    :: NEW FOR V4 ::    \n",
+    "    * Cloud masking approach changed to be less conservative with filling, and fix a bug. BUG FIX: checks to make sure\n",
+    "      a fill image has bands (i.e. no missing data) before trying to gap fill. Additionally, now have the option to cloud gap fill\n",
+    "      backwards and/or forwards in time. If both selected, first try to fill with prev year, then fill remaining gaps with next year.\n",
+    "    \n",
+    "\n",
+    "    :param aoi: ee.featurecollection.FeatureCollection, used to indicate AOI extent\n",
+    "    :param date_list: list of tuples of strings (i.e. [('a','b'),('c','d')]), used to define start & end of each compositing period, expects 'YYYY-MM-DD' format\n",
+    "    :param s2_params: dict, contains parameters used for cloud & shadow masking\n",
+    "    :param fill_mask_bkwd: bool, if true, attempts to fill cloud gaps using last year's data\n",
+    "    :param fill_mask_fwd: bool, if true, attempts to fill cloud gaps using next year's data\n",
+    "    :return: ee.image.Image, stack of monthly composite images of bands specified in s2_params\n",
+    "    \"\"\"\n",
+    "    print('fetch_sentinel2_v4(): hello!')\n",
+    "\n",
+    "    def get_s2_sr_cld_col(aoi, start_date, end_date):\n",
+    "        \"\"\"\n",
+    "        get & join the S2_SR and S2_CLOUD_PROBABILITY collections\n",
+    "\n",
+    "        uses globals:\n",
+    "            CLOUD_FILTER: max cloud coverage (%) permitted in a scene\n",
+    "\n",
+    "        :returns: ee.ImageCollection\n",
+    "        \"\"\"\n",
+    "        # Import and filter S2 SR.\n",
+    "        s2_sr_col = (ee.ImageCollection('COPERNICUS/S2_SR')\n",
+    "                     .filterBounds(aoi)\n",
+    "                     .filterDate(start_date, end_date)\n",
+    "                     .filter(ee.Filter.lte('CLOUDY_PIXEL_PERCENTAGE', CLOUD_FILTER)))\n",
+    "\n",
+    "        # Import and filter s2cloudless.\n",
+    "        s2_cloudless_col = (ee.ImageCollection('COPERNICUS/S2_CLOUD_PROBABILITY')\n",
+    "                            .filterBounds(aoi)\n",
+    "                            .filterDate(start_date, end_date))\n",
+    "\n",
+    "        # Join the filtered s2cloudless collection to the SR collection by the 'system:index' property.\n",
+    "        return ee.ImageCollection(\n",
+    "            ee.Join.saveFirst('s2cloudless').apply(**{\n",
+    "                'primary': s2_sr_col,\n",
+    "                'secondary': s2_cloudless_col,\n",
+    "                'condition': ee.Filter.equals(**{\n",
+    "                    'leftField': 'system:index',\n",
+    "                    'rightField': 'system:index'\n",
+    "                })}))\n",
+    "\n",
+    "    def add_cld_shdw_mask(img):\n",
+    "        \"\"\"\n",
+    "        generate a cloud and shadow mask band\n",
+    "        uses globals:\n",
+    "            BUFFER: distance (m) used to buffer cloud edges\n",
+    "        :returns: img with added cloud mask, shadow mask, and cloud-shadow mask\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Add cloud component bands.\n",
+    "        img_cloud = add_cloud_bands(img)\n",
+    "\n",
+    "        # Add cloud shadow component bands.\n",
+    "        img_cloud_shadow = add_shadow_bands(img_cloud)\n",
+    "\n",
+    "        # Combine cloud and shadow mask, set cloud and shadow as value 1, else 0.\n",
+    "        is_cld_shdw = (img_cloud_shadow.select('clouds')\n",
+    "                       .add(img_cloud_shadow.select('shadows')).gt(0)\n",
+    "                       )\n",
+    "\n",
+    "        # Remove small cloud-shadow patches and dilate remaining pixels by BUFFER input.\n",
+    "        # 20 m scale is for speed, and assumes clouds don't require 10 m precision.\n",
+    "        # mdj TODO: confirmation that BUFFER is in [m]\n",
+    "        #           focal_max() default units = pixels (and pix res is 10m)\n",
+    "        #           so if BUFFER = 100\n",
+    "        #           100 * 0.1 = 10 pixels\n",
+    "        #           10 pix * 10 [pix res] = 100m\n",
+    "        is_cld_shdw = (is_cld_shdw.focal_min(2).focal_max(BUFFER * 2 / 20)\n",
+    "                       .reproject(**{'crs': img.select([0]).projection(), 'scale': 20})\n",
+    "                       .rename('cloudshadowmask'))\n",
+    "\n",
+    "        # Add the final cloud-shadow mask to the image.\n",
+    "        return img_cloud_shadow.addBands(is_cld_shdw)\n",
+    "\n",
+    "    def add_cloud_bands(img):\n",
+    "        \"\"\"\n",
+    "        identify cloudy pixels using s2cloudless product probabilty band\n",
+    "\n",
+    "        uses globals:\n",
+    "            CLD_PRB_THRESH: s2cloudless 'probability' band value > thresh = cloud\n",
+    "\n",
+    "        :returns: img\n",
+    "        \"\"\"\n",
+    "        # Get s2cloudless image, subset the probability band.\n",
+    "        cld_prb = ee.Image(img.get('s2cloudless')).select('probability')\n",
+    "\n",
+    "        # Condition s2cloudless by the probability threshold value.\n",
+    "        is_cloud = cld_prb.gt(CLD_PRB_THRESH).rename('clouds')\n",
+    "\n",
+    "        # Add the cloud probability layer and cloud mask as image bands.\n",
+    "        return img.addBands(ee.Image([cld_prb, is_cloud]))\n",
+    "\n",
+    "    def add_shadow_bands(img):\n",
+    "        \"\"\"\n",
+    "        identify cloud shadows from intersection of:\n",
+    "            (1) darkest NIR scene pixels below NIR_DRK_THRESH that are not water\n",
+    "            (2) projected location of cloud shadows based on CLD_PRJ_DIST*10\n",
+    "\n",
+    "        uses globals:\n",
+    "            NIR_DRK_THRESH: if Band 8 (NIR) < NIR_DRK_THRESH = possible shadow\n",
+    "            CLD_PRJ_DIST:   max distnce [km or 100m?] from cloud edge for possible shadow\n",
+    "\n",
+    "        :returns: img\n",
+    "        \"\"\"\n",
+    "        # Identify water pixels from the SCL band.\n",
+    "        not_water = img.select('SCL').neq(6)\n",
+    "\n",
+    "        # Identify dark NIR pixels that are not water (potential cloud shadow pixels).\n",
+    "        SR_BAND_SCALE = 1e4\n",
+    "        dark_pixels = (img.select('B8').lt(NIR_DRK_THRESH * SR_BAND_SCALE)\n",
+    "                       .multiply(not_water)\n",
+    "                       .rename('dark_pixels')\n",
+    "                       )\n",
+    "\n",
+    "        # Determine the direction to project cloud shadow from clouds (assumes UTM projection).\n",
+    "        shadow_azimuth = ee.Number(90).subtract(ee.Number(img.get('MEAN_SOLAR_AZIMUTH_ANGLE')))\n",
+    "\n",
+    "        # Project shadows from clouds for the distance specified by the CLD_PRJ_DIST input.\n",
+    "        # mdj TODO: check why CLD_PRJ_DIST*10? i'm not convinced CLD_PRJ_DIST is in km..\n",
+    "        #           'clouds' is 10m res.\n",
+    "        #           directionalDistanceTransform 2nd arg 'maxDistance' is in pixels\n",
+    "        #           so actually CLD_PRJ_DIST units = 100s of m?\n",
+    "        cld_proj = (img.select('clouds')\n",
+    "                    .directionalDistanceTransform(shadow_azimuth, CLD_PRJ_DIST * 10)\n",
+    "                    .reproject(**{'crs': img.select(0).projection(), 'scale': 100})\n",
+    "                    .select('distance')\n",
+    "                    .mask()\n",
+    "                    .rename('cloud_transform'))\n",
+    "\n",
+    "        # Identify the intersection of dark pixels with cloud shadow projection.\n",
+    "        shadows = cld_proj.multiply(dark_pixels).rename('shadows')\n",
+    "\n",
+    "        # Add dark pixels, cloud projection, and identified shadows as image bands.\n",
+    "        return img.addBands(ee.Image([dark_pixels, cld_proj, shadows]))\n",
+    "\n",
+    "    def apply_cld_shdw_mask(img):\n",
+    "        \"\"\"\n",
+    "        apply the cloud & shadow mask\n",
+    "        :returns: img after application of cloud-shadow mask\n",
+    "        \"\"\"\n",
+    "\n",
+    "        # Subset the cloudmask band and invert it so clouds/shadow are 0, else 1.\n",
+    "        not_cld_shdw = img.select('cloudshadowmask').Not()\n",
+    "\n",
+    "        # Subset reflectance bands and update their masks, return the result.\n",
+    "        return img.select('B.*').updateMask(not_cld_shdw)\n",
+    "\n",
+    "    def fill_cloud_gaps(img_orig, img_fill):\n",
+    "        \"\"\"\n",
+    "        Where img_orig is masked (i.e. transparent null values) due to e.g. cloud masking,\n",
+    "        fill those gaps where possible using data from img_fill. any remaining gaps (i.e. cloudy in both images)\n",
+    "        are re-masked.\n",
+    "\n",
+    "        :param img_orig: Image, to be filled\n",
+    "        :param img_fill: Image, used for filling\n",
+    "        :returns: img_new, img_orig after gap filling and remasking\n",
+    "        \"\"\"\n",
+    "        img_new = img_orig.unmask(-99999)  # masked locations\n",
+    "        fill_pixels = img_new.eq(-99999)  # binary mask with value = 1 where we want to fill   \n",
+    "        img_new = img_new.where(fill_pixels, img_fill)  # fill img_new with img_fill where fill_pixels==1\n",
+    "        mask = img_new.neq(-99999)  # -99999 will remain where no valid pixels in img_fill (i.e. cloudy in both), so remask\n",
+    "        img_new = img_new.mask(mask)\n",
+    "        return img_new    \n",
+    "    \n",
+    "    # get individual variables from param dict\n",
+    "    CLOUD_FILTER = s2_params.get('CLOUD_FILTER')\n",
+    "    NIR_DRK_THRESH = s2_params.get('NIR_DRK_THRESH')\n",
+    "    CLD_PRJ_DIST = s2_params.get('CLD_PRJ_DIST')\n",
+    "    CLD_PRB_THRESH = s2_params.get('CLD_PRB_THRESH')\n",
+    "    BUFFER = s2_params.get('BUFFER')\n",
+    "    S2BANDS = s2_params.get('S2BANDS')\n",
+    "\n",
+    "    # iteratively fetch each month of Sentinel-2 imagery and generate a median composite for the AOI\n",
+    "    for i, date_tuple in enumerate(date_list):\n",
+    "        new_band_names = [f'S2_{x}_{date_tuple[0]}_{date_tuple[1]}' for x in S2BANDS]\n",
+    "        start_date = ee.Date(date_tuple[0])\n",
+    "        end_date = ee.Date(date_tuple[1])\n",
+    "\n",
+    "        # load and process collection for current year\n",
+    "        s2_sr_cld_col = get_s2_sr_cld_col(aoi, start_date, end_date)\n",
+    "        s2cldless_median = (s2_sr_cld_col.map(add_cld_shdw_mask)\n",
+    "                            .map(apply_cld_shdw_mask)\n",
+    "                            .select(S2BANDS)\n",
+    "                            .median()\n",
+    "                            .clip(aoi.geometry()))\n",
+    "        \n",
+    "        # try to cloud gap fill backwards in time       \n",
+    "        if fill_mask_bkwd:\n",
+    "            s2_sr_cld_col_fill_bkwd = get_s2_sr_cld_col(aoi, start_date.advance(-1, 'year'), end_date.advance(-1, 'year'))\n",
+    "            s2cldless_median_fill_bkwd = (s2_sr_cld_col_fill_bkwd.map(add_cld_shdw_mask)\n",
+    "                                     .map(apply_cld_shdw_mask)\n",
+    "                                     .select(S2BANDS)\n",
+    "                                     .median()\n",
+    "                                     .clip(aoi.geometry()))\n",
+    "            # sometimes S2 data used for bkwd filling is missing; in these cases, we cannot gap fill\n",
+    "            band_test = len(s2cldless_median_fill_bkwd.bandNames().getInfo())\n",
+    "            if band_test > 0:\n",
+    "                print(f\"fetch_sentinel2_v4(): apply backward cloud gap filling for {date_tuple[0]} - {date_tuple[1]}...\")                \n",
+    "                # if bands are present apply cloud gap filling\n",
+    "                s2cldless_median = fill_cloud_gaps(img_orig=s2cldless_median,\n",
+    "                                                   img_fill=s2cldless_median_fill_bkwd)\n",
+    "            else:\n",
+    "                print(f\"fetch_sentinel2_v4(): Skipping backward cloud gap filling for {date_tuple[0]} - {date_tuple[1]}; missing S2 data one year earlier\")\n",
+    "\n",
+    "        \n",
+    "        # try to cloud gap fill forwards in time       \n",
+    "        if fill_mask_fwd:          \n",
+    "            s2_sr_cld_col_fill_fwd = get_s2_sr_cld_col(aoi, start_date.advance(1, 'year'), end_date.advance(1, 'year'))\n",
+    "            s2cldless_median_fill_fwd = (s2_sr_cld_col_fill_fwd.map(add_cld_shdw_mask)\n",
+    "                                     .map(apply_cld_shdw_mask)\n",
+    "                                     .select(S2BANDS)\n",
+    "                                     .median()\n",
+    "                                     .clip(aoi.geometry()))\n",
+    "            # sometimes S2 data used for fwd filling is missing; in these cases, we cannot gap fill\n",
+    "            band_test = len(s2cldless_median_fill_fwd.bandNames().getInfo())\n",
+    "            if band_test > 0:\n",
+    "                print(f\"fetch_sentinel2_v4(): apply forward cloud gap filling for {date_tuple[0]} - {date_tuple[1]}...\")                \n",
+    "                # if bands are present apply cloud gap filling\n",
+    "                s2cldless_median = fill_cloud_gaps(img_orig=s2cldless_median,\n",
+    "                                                   img_fill=s2cldless_median_fill_fwd)\n",
+    "            else:\n",
+    "                print(f\"fetch_sentinel2_v4(): Skipping forward cloud gap filling for {date_tuple[0]} - {date_tuple[1]}; missing S2 data one year later\")\n",
+    "         \n",
+    "        # rename bands\n",
+    "        s2cldless_median = s2cldless_median.rename(new_band_names)\n",
+    "        # append to stack\n",
+    "        if i == 0:\n",
+    "            median_stack = s2cldless_median\n",
+    "        else:\n",
+    "            median_stack = median_stack.addBands(s2cldless_median)\n",
+    "    print('fetch_sentinel2_v4(): bye!')\n",
+    "    return median_stack"
    ]
   },
   {
@@ -308,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +590,37 @@
     "    'BUFFER': 50,  # int, distance (m) used to buffer cloud edges\n",
     "    # 'S2BANDS': ['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B8A', 'B11', 'B12']\n",
     "    'S2BANDS': ['B2', 'B3', 'B4', 'B5', 'B6', 'B7', 'B8', 'B11', 'B12']  # list of str, which S2 bands to return?\n",
-    "}"
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fetch_sentinel2_v4(): hello!\n",
+      "fetch_sentinel2_v4(): Skipping backward cloud gap filling for 2018-03-01 - 2018-03-30; missing S2 data one year earlier\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-03-01 - 2018-03-30...\n",
+      "fetch_sentinel2_v4(): apply backward cloud gap filling for 2018-04-01 - 2018-04-30...\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-04-01 - 2018-04-30...\n",
+      "fetch_sentinel2_v4(): apply backward cloud gap filling for 2018-05-01 - 2018-05-31...\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-05-01 - 2018-05-31...\n",
+      "fetch_sentinel2_v4(): apply backward cloud gap filling for 2018-06-01 - 2018-06-30...\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-06-01 - 2018-06-30...\n",
+      "fetch_sentinel2_v4(): apply backward cloud gap filling for 2018-07-01 - 2018-07-30...\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-07-01 - 2018-07-30...\n",
+      "fetch_sentinel2_v4(): Skipping backward cloud gap filling for 2018-10-01 - 2018-10-30; missing S2 data one year earlier\n",
+      "fetch_sentinel2_v4(): apply forward cloud gap filling for 2018-10-01 - 2018-10-30...\n",
+      "fetch_sentinel2_v4(): bye!\n"
+     ]
+    }
+   ],
+   "source": [
+    "median_stack = fetch_sentinel2_v4(aoi, date_list, s2_params, fill_mask_fwd=True, fill_mask_bkwd=True)"
    ]
   },
   {
@@ -359,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1110,10 +1401,10 @@
       "})\n",
       "\n",
       "\n",
-      "s2cldless_median_fill: 0\n",
-      "S2 SR: 0\n",
+      "s2cldless_median_fill: 9\n",
+      "S2 SR: 23\n",
       "S2 cloud prob: 1\n",
-      "joined: 0\n"
+      "joined: 23\n"
      ]
     }
    ],
@@ -1135,8 +1426,8 @@
     "new_s = bkwd_start_date\n",
     "new_e = bkwd_end_date\n",
     "\n",
-    "#new_s = fwd_start_date\n",
-    "#new_e = fwd_end_date\n",
+    "new_s = fwd_start_date\n",
+    "new_e = fwd_end_date\n",
     "\n",
     "s2_sr_cld_col_fill = get_s2_sr_cld_col(aoi, new_s, new_e)\n",
     "s2cldless_median_fill = (s2_sr_cld_col_fill.map(add_cld_shdw_mask)\n",
